tests/ui/async-await/in-trait/object-safety.lower-impl-trait-in-trait-to-assoc-ty.stderr
warning: the feature `async_fn_in_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/object-safety.rs:3:12
   |
LL | #![feature(async_fn_in_trait)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #91611 <https://github.com/rust-lang/rust/issues/91611> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0191]: the value of the associated type `` (from trait `Foo`) must be specified
  --> $DIR/object-safety.rs:11:17
   |
LL |     async fn foo(&self);
   |                        - `` defined here
...
LL |     let x: &dyn Foo = todo!();
   |                 ^^^ help: specify the associated type: `Foo< = Type>`

error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/object-safety.rs:11:12
   |
LL |     let x: &dyn Foo = todo!();
   |            ^^^^^^^^ `Foo` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/object-safety.rs:7:14
   |
LL | trait Foo {
   |       --- this trait cannot be made into an object...
LL |     async fn foo(&self);
   |              ^^^       ^ ...because it contains the generic associated type ``
   |              |
   |              ...because method `foo` is `async`
   = help: consider moving `foo` to another trait
   = help: consider moving `` to another trait

error: aborting due to 2 previous errors; 1 warning emitted

Some errors have detailed explanations: E0038, E0191.
For more information about an error, try `rustc --explain E0038`.
